migrations from django 2.2 to 3.0

--- a/templates/custom_admin/account/account_base.html
+++ b/templates/custom_admin/account/account_base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <!-- begin::Head -->
@@ -99,82 +99,3 @@
 <!-- Mirrored from keenthemes.com/metronic/preview/demo1/custom/pages/user/login-4.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 07 May 2019 04:10:36 GMT -->
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--{% load staticfiles %}-->
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-
-<!--<head>-->
-<!--  &lt;!&ndash; Required meta tags &ndash;&gt;-->
-<!--  <meta charset="utf-8">-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-<!--  <title>WorkForce admin</title>-->
-
-<!--  &lt;!&ndash; plugins:css &ndash;&gt;-->
-<!--  <link rel="stylesheet" href="{% static 'custom_admin/vendors/iconfonts/mdi/css/materialdesignicons.min.css' %}">-->
-<!--  <link rel="stylesheet" href="{% static 'custom_admin/vendors/css/vendor.bundle.base.css' %}">-->
-<!--  <link rel="stylesheet" href="{% static 'custom_admin/vendors/css/vendor.bundle.addons.css' %}">-->
-<!--  &lt;!&ndash; endinject &ndash;&gt;-->
-<!--  &lt;!&ndash; plugin css for this page &ndash;&gt;-->
-<!--  &lt;!&ndash; End plugin css for this page &ndash;&gt;-->
-<!--  &lt;!&ndash; inject:css &ndash;&gt;-->
-<!--  <link rel="stylesheet" href="{% static 'custom_admin/css/style.css' %}">-->
-<!--  &lt;!&ndash; endinject &ndash;&gt;-->
-<!--  <link rel="shortcut icon" href="{% static 'custom_admin/images/favicon.png' %}" />-->
-<!--</head>-->
-
-<!--<body>-->
-<!--  <div class="container-scroller">-->
-
-
-<!--    &lt;!&ndash; page-body-wrapper ends &ndash;&gt;-->
-<!--  </div>-->
-<!--  &lt;!&ndash; container-scroller &ndash;&gt;-->
-<!--  &lt;!&ndash; plugins:js &ndash;&gt;-->
-<!--  <script src="{% static 'custom_admin/vendors/js/vendor.bundle.base.js' %}"></script>-->
-<!--  <script src="{% static 'custom_admin/vendors/js/vendor.bundle.addons.js' %}"></script>-->
-<!--  &lt;!&ndash; endinject &ndash;&gt;-->
-<!--  &lt;!&ndash; inject:js &ndash;&gt;-->
-<!--  <script src="{% static 'custom_admin/js/off-canvas.js' %}"></script>-->
-<!--  <script src="{% static 'custom_admin/js/misc.js' %}"></script>-->
-<!--  &lt;!&ndash; endinject &ndash;&gt;-->
-<!--</body>-->
-
-<!--</html>-->
