--- a/templates/custom_admin/account/register.html
+++ b/templates/custom_admin/account/register.html
@@ -1,5 +1,5 @@
 {% extends "custom_admin/account/account_base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
 <div class="">
     <div class="kt-login__head">
