--- a/templates/custom_admin/partials/_footer.html
+++ b/templates/custom_admin/partials/_footer.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!-- begin:: Footer -->
 <div class="kt-footer kt-grid__item kt-grid kt-grid--desktop kt-grid--ver-desktop" id="kt_footer">
     <div class="kt-footer__copyright">
