--- a/templates/custom_admin/partials/_navbar.html
+++ b/templates/custom_admin/partials/_navbar.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!-- begin:: Header -->
 <div id="kt_header" class="kt-header kt-grid__item  kt-header--fixed ">
 
