--- a/templates/custom_admin/partials/_sidebar.html
+++ b/templates/custom_admin/partials/_sidebar.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!-- begin:: Aside -->
 <button class="kt-aside-close " id="kt_aside_close_btn"><i class="la la-close"></i></button>
 
