--- a/templates/custom_admin/user/list-v1.html
+++ b/templates/custom_admin/user/list-v1.html
@@ -1,5 +1,5 @@
 {% extends "custom_admin/index.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
 <!-- begin:: Subheader -->
 <div class="kt-subheader   kt-grid__item" id="kt_subheader">
